style(scrollbar): fixed vertical scrollbar width

--- a/Sass/base/_reset.scss
+++ b/Sass/base/_reset.scss
@@ -37,7 +37,7 @@ input {
 }
 
 ::-webkit-scrollbar:vertical {
-  height: 0.5rem;
+  width: 0.5rem;
 }
 
 ::-webkit-scrollbar-track {
